[gd_scene load_steps=14 format=3 uid="uid://cj4lw86a3m16s"]

[ext_resource type="Script" path="res://Assets/NPCs/ox.gd" id="1_tsc0a"]
[ext_resource type="Texture2D" uid="uid://4dr0niiuicyl" path="res://Assets/Sprites/ox.png" id="2_7sg37"]
[ext_resource type="PackedScene" uid="uid://b780hw38aude7" path="res://DialogBox.tscn" id="3_darah"]
[ext_resource type="AudioStream" uid="uid://igk8n2a22fp2" path="res://Assets/SFX/oxGrowl 1.wav" id="4_xaidu"]
[ext_resource type="AudioStream" uid="uid://ct2vvv7pokvst" path="res://Assets/SFX/oxVoice.wav" id="5_2vbtq"]
[ext_resource type="AudioStream" uid="uid://npkps8ia1pyn" path="res://Assets/SFX/ox combo Take Off.ogg" id="6_lg1uj"]
[ext_resource type="Texture2D" uid="uid://c4fqhrsyjtq54" path="res://Assets/Icons/interesting.png" id="7_kp0fj"]

[sub_resource type="Animation" id="Animation_qp465"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ct6dl"]
resource_name = "new_animation"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.605629, 0.0, -0.605629, 0.0, 0.605629, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_23tq6"]
_data = {
"RESET": SubResource("Animation_qp465"),
"shake quarter sec": SubResource("Animation_ct6dl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5orx"]
size = Vector2(36.5, 57.5)

[sub_resource type="Animation" id="Animation_7q8xx"]
resource_name = "ExclamDance"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InterestingIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 0.241484, 0.435275, 1, 0.435275, 2.07053),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -40), Vector2(0, -32), Vector2(0, -32), Vector2(0, -40), Vector2(0, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InterestingIcon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oy0g4"]
_data = {
"ExclamDance": SubResource("Animation_7q8xx")
}

[node name="Ox" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_tsc0a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_23tq6")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7sg37")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4.74999, 2.25)
rotation = 1.5708
shape = SubResource("RectangleShape2D_n5orx")

[node name="Dialog" parent="." instance=ExtResource("3_darah")]
visible = false

[node name="DialogSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xaidu")
bus = &"SFX"

[node name="IdleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2vbtq")
max_distance = 1500.0
bus = &"SFX"

[node name="Timer" type="Timer" parent="IdleSound"]
wait_time = 3.0
autostart = true

[node name="Flight noise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lg1uj")
volume_db = 2.0
max_distance = 4000.0
panning_strength = 1.5
bus = &"SFX"

[node name="InterestingNode" type="Node2D" parent="."]
position = Vector2(0, -4)

[node name="InterestingIcon" type="Sprite2D" parent="InterestingNode"]
position = Vector2(0, -32)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_kp0fj")

[node name="InterestingAnim" type="AnimationPlayer" parent="InterestingNode"]
libraries = {
"": SubResource("AnimationLibrary_oy0g4")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="option_selected" from="Dialog" to="." method="_on_dialog_option_selected"]
[connection signal="finished" from="IdleSound" to="." method="_on_idle_sound_finished"]
[connection signal="timeout" from="IdleSound/Timer" to="." method="_on_timer_timeout"]
